// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change Password Form renders Change Password Form 1`] = `
<div
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-1 MuiTypography-headline-6 MuiTypography-colorTextPrimary-23"
    >
      Change Password
    </h2>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-marginDense-32"
        data-shrink={false}
        htmlFor={undefined}
      >
        Current Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="currentPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-marginDense-32"
        data-shrink={false}
        htmlFor={undefined}
      >
        New Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="newPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-marginDense-32"
        data-shrink={false}
        htmlFor={undefined}
      >
        Confirm New Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="confirmNewPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <button
      className="MuiButtonBase-root-88 MuiButtonBase-disabled-89 MuiButton-root-62 MuiButton-text-64 MuiButton-outlined-70 MuiButton-sizeSmall-85 MuiButton-disabled-82"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-63"
      >
        Change Password
      </span>
    </button>
  </form>
</div>
`;

exports[`Change Password Form renders Change Password with isChangingPassword as true 1`] = `
<div
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-1 MuiTypography-headline-6 MuiTypography-colorTextPrimary-23"
    >
      Change Password
    </h2>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-marginDense-32"
        data-shrink={false}
        htmlFor={undefined}
      >
        Current Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="currentPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-marginDense-32"
        data-shrink={false}
        htmlFor={undefined}
      >
        New Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="newPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-marginDense-32"
        data-shrink={false}
        htmlFor={undefined}
      >
        Confirm New Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="confirmNewPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <button
      className="MuiButtonBase-root-88 MuiButtonBase-disabled-89 MuiButton-root-62 MuiButton-text-64 MuiButton-outlined-70 MuiButton-sizeSmall-85 MuiButton-disabled-82"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-63"
      >
        <div
          className="MuiCircularProgress-root-91 MuiCircularProgress-colorPrimary-94 MuiCircularProgress-indeterminate-93"
          role="progressbar"
          style={
            Object {
              "height": 22,
              "width": 22,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-96"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-97 MuiCircularProgress-circleIndeterminate-99"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </button>
  </form>
</div>
`;
